New Scene "New" and "Copy Settings" not working with Cycles settings #37627

Closed
opened 2013-11-26 11:12:01 +01:00 by step-ani-motion · 10 comments

System Information
Win7, Quadro 4000 + GTX 690

Blender Version
Broken: Blender 2.69

Short description of error

  1. New Scene: "New" doesn't use custom startup settings (i.e. render engine)
  2. New Scene: "Copy Settings" not working with Cycles render settings (i.e. Device, Sampling, Light Paths, etc)

Exact steps for others to reproduce the error
There are three scenes in the blend file. "Scene Original" is the origin of the other two.
Compare the render settings.

**System Information** Win7, Quadro 4000 + GTX 690 **Blender Version** Broken: Blender 2.69 **Short description of error** 1. New Scene: "New" doesn't use custom startup settings (i.e. render engine) 2. New Scene: "Copy Settings" not working with Cycles render settings (i.e. Device, Sampling, Light Paths, etc) **Exact steps for others to reproduce the error** There are three scenes in the blend file. "Scene Original" is the origin of the other two. Compare the render settings.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @STEP-ANI-MOTION

Added subscriber: @STEP-ANI-MOTION
[NewScene.blend](https://archive.blender.org/developer/F33043/NewScene.blend)

Added subscriber: @brecht

Added subscriber: @brecht
Brecht Van Lommel self-assigned this 2013-11-26 15:15:40 +01:00

The behavior of "New" is not a bug, the way it works is that it creates a new scene with default Blender settings, unrelated to what you save in your startup.blend. I can see that copying the scene from your startup.blend would be more useful in many cases, but it was not designed to work at the moment this way so not a bug.

There is a bug in "Copy Settings" however, looking into it.

The behavior of "New" is not a bug, the way it works is that it creates a new scene with default Blender settings, unrelated to what you save in your startup.blend. I can see that copying the scene from your startup.blend would be more useful in many cases, but it was not designed to work at the moment this way so not a bug. There is a bug in "Copy Settings" however, looking into it.

This issue was referenced by blender/blender-addons-contrib@b65eb761cc

This issue was referenced by blender/blender-addons-contrib@b65eb761cc13043d3a9c49f447afc22a11c20d6c

This issue was referenced by b65eb761cc

This issue was referenced by b65eb761cc13043d3a9c49f447afc22a11c20d6c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b65eb761cc.

Closed by commit b65eb761cc.

Fixed "Copy Settings" now, thanks for the report.

Fixed "Copy Settings" now, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37627
No description provided.