Fix T37627: create scene with copy settings did not copy cycles settings.